etc/firewall.rules
# Generated by iptables-save v1.6.1 on Wed Jan 16 00:54:26 2019
*filter
:INPUT ACCEPT [4:336]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [8:560]
:TRAFFIC_IN - [0:0]
:TRAFFIC_OUT - [0:0]
-A INPUT -i eth1 -j TRAFFIC_IN
-A INPUT -i ppp0 -j TRAFFIC_IN
-A OUTPUT -o eth1 -j TRAFFIC_OUT
-A OUTPUT -o ppp0 -j TRAFFIC_OUT
-A TRAFFIC_IN -p tcp -m tcp --sport 80 -m limit --limit 1/sec -j LOG --log-prefix "netlog http "
-A TRAFFIC_IN -p tcp -m tcp --sport 20022 -m limit --limit 1/sec -j LOG --log-prefix "netlog ssh "
-A TRAFFIC_IN -p tcp -m tcp --sport 23181 -m limit --limit 1/sec -j LOG --log-prefix "netlog rmq "
-A TRAFFIC_IN -p tcp -m multiport ! --sports 80,20022,23181 -m limit --limit 1/sec -j LOG --log-prefix "netlog unknown "
-A TRAFFIC_OUT -p tcp -m tcp --dport 80 -m limit --limit 1/sec -j LOG --log-prefix "netlog http "
-A TRAFFIC_OUT -p tcp -m tcp --dport 20022 -m limit --limit 1/sec -j LOG --log-prefix "netlog ssh "
-A TRAFFIC_OUT -p tcp -m tcp --dport 23181 -m limit --limit 1/sec -j LOG --log-prefix "netlog rmq "
-A TRAFFIC_OUT -p tcp -m multiport ! --dports 80,20022,23181 -m limit --limit 1/sec -j LOG --log-prefix "netlog unknown "
COMMIT
# Completed on Wed Jan 16 00:54:26 2019
